# Computational-Physics

./: 2D newtons method.ipynb  Arbitrary Random Ditribution (Accept Reject).ipynb  README.md  Update rule (Delta rule).ipynb  mayavi_practice.py
.ipynb_checkpoints/: 2D newtons method-checkpoint.ipynb  How to plot loglog-checkpoint.ipynb
BMEMasterThesis/: AlbuminModelNewImplementation.sbproj  README.md
Finite Difference Methods/: Systematic Method to derive FDA equations from Taylor series.ipynb
FullPendulumSimulation/: Core.py  Element.py  Main.py  Particles.py  RealWorld.py  Screen.py  SimWorld.py  Solver.py  Star.py  Type.py  main.py
GeneralSimulationApproach/: Core.py  Main.py  Particles.py  Screen.py  Solver.py  Star.py  Type.py  main.py
Graphics Template/: main.py  sketch.py
Great Notes/: EasyWaytoCalculateFourierIntegral.ipynb  Reshaping_in_python_and_matlab.ipynb  WebBasedPhysics.txt
Mandelbrot_Julia_LogesticMap/: BifurcationInMandelbrotTransform.ipynb  MandelbrotInLogesticMap.ipynb
MathematicalBiology/: Continuous Population models.ipynb
PBPK for DOTATATE/: ComplexCompartment.py  ComplexOrgans.py  FreePeptideClass.py  MasterCompartment.py  MasterCompartments.py  MasterOrgans.py  Patient_info.py  README.md  ReceptorNegative.py  ReceptorNegativeCompartment.py  ReceptorNegativeOrgans.py  Tests.py  (+12 more)
Physical Systems/Double Pendulum/CPP implementation/: CMakeLists.txt  README.md  main.cpp
Physical Systems/Double Pendulum/CPP implementation/libs/: Ball.cpp  Ball.h  Line.cpp  Line.h  Physics.cpp  Physics.h  Pivot.cpp  Pivot.h  Sketch.cpp  Sketch.h
(+372 files in other folders)
